# doubao-batch-translator-rust

./: .env.example  .gitignore  Cargo.toml
examples/: test_api.rs  test_api_debug.rs  test_epub_parse.rs  test_epub_translation.rs  test_simple.rs
src/: lib.rs  main.rs
src/cli/: commands.rs
src/core/: client.rs  config.rs  errors.rs  mod.rs  models.rs  token_tracker.rs
src/processors/: epub.rs  markdown.rs  mod.rs
src/server/: api.rs  mod.rs
src/utils/: mod.rs  progress.rs
