[package]
name = "doubao-translator"
version = "0.1.0"
edition = "2021"
authors = ["Louis Lau <louis@example.com>"]
description = "高性能豆包批量翻译器 - Rust 版本"
license = "MIT"
repository = "https://github.com/your-username/doubao-batch-translator-rust"

[[bin]]
name = "doubao-translator"
path = "src/main.rs"

[lib]
name = "doubao_translator"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 网络通信
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["ws"] }
hyper = "1.0"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = "4.0"

# 文本处理
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"

# 文件处理
epub = "2.0"
zip = "0.6"

# 工具库
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
config = "0.13"
dotenvy = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
walkdir = "2.4"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 测试
[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true